--- a/res/wasm-frontend/namu.html
+++ b/res/wasm-frontend/namu.html
@@ -13,7 +13,7 @@
       <progress value="0" max="100" id="progress" hidden=1></progress>
     </div>
 
-    <div id="playbt" onclick="runModule()"></div>
+    <div id="playbt"></div>
 
     <textarea id="output"></textarea>
 
