--- a/play/index.html
+++ b/play/index.html
@@ -38,15 +38,14 @@ permalink: play/
         var bottom = document.getElementById('bottom_pane');
         bottom.style.setProperty('height', '0px');
     }
- 
+
     function onchangeSrc(value) {
         var codepad = document.getElementById('src');
         switch(value) {
             case 'hello-world': codepad.value = `
-// Hello. This is Namu:
+// Hello, I'm Namu language.
 // Please edit your code freely and press button in the top right to run.
-// Refer to the 'guide' section for more detailed syntax.
-
+// Refer to the 'guide' section above for more syntax.
 main() void
     print("hello world!")`;
                 break;
@@ -66,22 +65,22 @@ main() void
     last := for p in {mike, mike(), mike(mike)}
         p.bow()
 
-    print("and last one was " + last)`;
+    print("and second one was " + last[1])`;
                 break;
-
-
         }
     }
 </script>
 <script type='text/javascript' src='namu-starter.js'></script>
 <div id="top_pane">
-    <select id='dd-srcs' onchange='onchangeSrc(this.value)'>
-        <option value='hello-world'>hello world!</option>
-        <option value='bow-to-everyone'>bow to mike's</option>
-    </select>
-    <input type='checkbox' id='verbose' />
-    <label id='lb_verbose' for='verbose'>verbose</label>
-    <input type='button' id='runbt' value='▶' onclick='runScript("namu", "src");'/>
+  <label class="bin_ver">power by</label>
+  <a class="bin_ver" href="https://github.com/namulang/namu/releases/tag/v0.2.7">namu v0.2.7</a>
+  <select id='dd-srcs' onchange='onchangeSrc(this.value)'>
+      <option value='hello-world'>hello world!</option>
+      <option value='bow-to-everyone'>bow to mike's</option>
+  </select>
+  <input type='checkbox' id='verbose' />
+  <label id='lb_verbose' for='verbose'>verbose</label>
+  <input type='button' id='runbt' value='▶' onclick='runScript("namu", "src");'/>
 </div>
 <div id="mid_pane">
     <textarea class='scrollbar' id='src' onkeydown='inputTab(this)'></textarea>
