feat: user can save their source codes using webStorage

--- a/play/index.html
+++ b/play/index.html
@@ -12,6 +12,7 @@ permalink: play/
     <div class="bin_ver">powered by</div>
     <a class="bin_ver" href="https://github.com/namulang/namu/releases/tag/v0.2.7">namu v0.2.7</a>
     <select id='dd-srcs' onchange='onchangeSrc(this.value)'>
+        <option value='your-codes'>your codes</option>
         <option value='hello-world'>hello world!</option>
         <option value='bow-to-everyone'>bow to mike's</option>
     </select>
