fix: when scrollbar appears on codepad, layout collapsed

--- a/play/index.html
+++ b/play/index.html
@@ -22,7 +22,7 @@ permalink: play/
   <div id="bottom_pane">
     <div id="codepad">
       <textarea id="ta_codepad" class='scrollbar' id='src' onkeydown='inputTab(this)' onkeyup='highlight(this)'></textarea>
-      <pre id="pre_codepad">
+      <pre class="scrollbar" id="pre_codepad">
         <code class="language-namu"></code>
       </pre>
     </div>
