feat: fetching latest wasm binary and version info from namu repo
* using github REST API with Octokit.js

--- a/play/index.html
+++ b/play/index.html
@@ -6,11 +6,11 @@ permalink: play/
 <link rel="stylesheet" type="text/css" href="highlightjs-theme-namu.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
 <script src="https://github.com/namulang/highlightjs-namu/releases/latest/download/highlightjs-namu-min.js"></script>
-<script type='text/javascript' src='namu-starter.js'></script>
+<script type='module' src='namu-starter.js'></script>
 <div class="initial-content">
   <div id="top_pane">
     <div class="bin_ver">powered by</div>
-    <a class="bin_ver" href="https://github.com/namulang/namu/releases/tag/v0.2.8">namu v0.2.8</a>
+    <a id="version" class="bin_ver" href="https://github.com/namulang/namu/releases/latest">namu</a>
     <select id='dd-srcs' onchange='onchangeSrc(this.value)'>
         <option value='your-codes'>your codes</option>
         <option value='hello-world'>hello world!</option>
