fix: play button doesn't work

--- a/play/index.html
+++ b/play/index.html
@@ -6,7 +6,7 @@ permalink: play/
 <link rel="stylesheet" type="text/css" href="highlightjs-theme-namu.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
 <script src="https://github.com/namulang/highlightjs-namu/releases/latest/download/highlightjs-namu-min.js"></script>
-<script type='module' src='namu-starter.js'></script>
+<script src='namu-starter.js'></script>
 <div class="initial-content">
   <div id="top_pane">
     <div class="bin_ver">powered by</div>
